# mcp_sample

./: README.md  blur_client.py  blur_server.py  pyproject.toml  simple_client.py  simple_server.py
